feat : adding reset and new game buttons

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="heading">
+    <img src="gamelogo.png" alt="gamelogo" style="height: 80px;width: 80px;">
+  <h1>TIC-TAC-TOE</h1>
+</div>
+    <div class="msg-container hide">
+        <p id="message">Winner</p>
+        <button id="new-game">New game</button>
+    </div>
     <main> 
-        <div class="heading">
-            <img src="gamelogo.png" alt="gamelogo" style="height: 80px;width: 80px;">
-          <h1>TIC-TAC-TOE</h1>
-        </div>
       <div class = "container">
         <div class = "gameboard">
          <button class = "box"></button>
